Adding functional tests with Selenium and Pytest.

--- a/pytest.ini
+++ b/pytest.ini
@@ -5,6 +5,7 @@ addopts =
   --doctest-modules
   --strict-markers
 markers =
-  slow: RUN tests that are slow
-  fast: RUN fast tests
+  slow: Run tests that are slow
+  fast: Run fast tests
+  functional_test: Run tests that are selenium based
   
