--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,53 @@
 asgiref==3.5.0
+async-generator==1.10
 attrs==21.4.0
 autopep8==1.6.0
+certifi==2022.5.18.1
+cffi==1.15.0
+charset-normalizer==2.0.12
 colorama==0.4.4
 coverage==6.3.3
+cryptography==37.0.2
 Django==4.0.4
 docopt==0.6.2
 Faker==13.11.0
 flake8==4.0.1
+h11==0.13.0
+idna==3.3
 iniconfig==1.1.1
 mccabe==0.6.1
 mypy==0.950
 mypy-extensions==0.4.3
+outcome==1.1.0
 packaging==21.3
 parameterized==0.8.1
 Pillow==9.1.0
 pluggy==1.0.0
 py==1.11.0
 pycodestyle==2.8.0
+pycparser==2.21
 pyflakes==2.4.0
+pyOpenSSL==22.0.0
 pyparsing==3.0.9
+PySocks==1.7.1
 pytest==7.1.2
 pytest-django==4.5.2
 pytest-watch==4.2.0
 python-dateutil==2.8.2
 python-dotenv==0.20.0
 python-slugify==6.1.2
+requests==2.27.1
+selenium==4.2.0
 six==1.16.0
+sniffio==1.2.0
+sortedcontainers==2.4.0
 sqlparse==0.4.2
 text-unidecode==1.3
 toml==0.10.2
 tomli==2.0.1
+trio==0.20.0
+trio-websocket==0.9.2
 typing_extensions==4.2.0
+urllib3==1.26.9
 watchdog==2.1.7
+wsproto==1.1.0
