--- a/.env-example
+++ b/.env-example
@@ -1,5 +1,5 @@
 # Default number of objects per page
-PER_PAGE = 6
+PER_PAGE = 9
 
 # Default number of pages
 QTY_PAGE = 4
@@ -9,3 +9,20 @@ SECRET_KEY = 'CHANGE-ME'
 
 # 0 = False | 1 = True
 DEBUG = 0
+
+# 0 = False | 1 = True
+SELENIUM_HEADLESS = 0
+
+# Database settings
+# Sqlite
+DATABASE_ENGINE = 'django.db.backends.sqlite3'
+DATABASE_NAME = "./db.sqlite3"
+
+# Postgres
+# DATABASE_ENGINE='django.db.backends.postgresql'
+# DATABASE_NAME="basededados"
+
+DATABASE_USER = "user"
+DATABASE_PASSWORD = "password"
+DATABASE_HOST = "127.0.0.1"
+DATABASE_PORT = "5432"
