Add pytest-dotenv to load .env with pytest.

--- a/requirements.txt
+++ b/requirements.txt
@@ -33,6 +33,7 @@ pyparsing==3.0.9
 PySocks==1.7.1
 pytest==7.1.2
 pytest-django==4.5.2
+pytest-dotenv==0.5.2
 pytest-watch==4.2.0
 python-dateutil==2.8.2
 python-dotenv==0.20.0
